--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
     "sass": "^1.77.8",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.5.3",
     "vite": "^5.4.0"
+  },
+  "dependencies": {
+    "leaflet": "^1.9.4"
   }
 }
