--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
+    "@types/node": "^22.3.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
     "sass": "^1.77.8",
