--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "vite --host & (yarn run typed-scss:dev)",
+    "build": "(yarn run typed-scss) & tsc && vite build",
+    "preview": "vite preview",
+    "typed-scss": "typed-scss-modules src/**/*.module.scss --nameFormat camel --aliasPrefixes.@style src/assets/style/",
+    "typed-scss:dev": "yarn typed-scss --watch"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.12",
     "@types/node": "^22.3.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "sass": "^1.77.8",
     "tailwindcss": "^3.4.9",
+    "typed-scss-modules": "^8.0.1",
     "typescript": "^5.5.3",
     "vite": "^5.4.0"
   },
